fix: main overflow

--- a/src/pages/time-period-events/styles.module.scss
+++ b/src/pages/time-period-events/styles.module.scss
@@ -10,7 +10,7 @@
   margin: 0 auto;
   border-inline: 1px solid rgba($c-primary, 0.1);
   overflow: hidden;
-  padding: 50vh 0;
+  margin: 2vw 0 2vw 0;
 
   @media screen and (max-width: $bp-tablet) {
     gap: 100px;
