--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   background-color: #F4F5F9;
+  overflow-x: hidden;
 }
 
 button {
@@ -21,10 +22,8 @@ button {
 main {
   justify-content: center;
   align-items: center;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
 }
 
 .swiper-pagination {
